--- a/www/index.html
+++ b/www/index.html
@@ -22,14 +22,42 @@
   </head>
   <body ng-app="starter">
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Map Notes</h1>
-      </ion-header-bar>
-      <ion-nav-view></ion-nav-view>
-      <!--<ion-content>
-      </ion-content>-->
-    </ion-pane>
+    <div  ng-controller="MenuCtrl">
+      <ion-side-menus>
+        <!--Center content-->
+        <!--<ion-pane>-->
+        <ion-side-menu-content>
+          <ion-nav-bar>
+            <ion-header-bar class="bar-stable">
+            <h1 class="title">Map Notes</h1>
+              <ion-nav-buttons side="left">
+              <!-- Toggle left side menu -->
+                <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+              </ion-nav-buttons>
+            </ion-header-bar>
+          </ion-nav-bar>
+        <ion-nav-view></ion-nav-view>
+          <!--<ion-content>
+          </ion-content>-->
+        </ion-side-menu-content>
+        <!--</ion-pane>-->
+
+        <!-- Left Menu -->
+        <ion-side-menu side="left">
+            <ion-header-bar class="bar-stable">
+                <h1 class="title">Map Notes</h1>
+            </ion-header-bar>
+            <ion-content>
+              <ion-list>
+                <ion-item ng-repeat="task in tasks">
+                  {{task.title}}
+                </ion-item>
+              </ion-list>
+            </ion-content>
+        </ion-side-menu>
+
+      </ion-side-menus>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!--<script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCZnUzSkNCumO4XVfZ9V26yLh9Y__14C9U&sensor=true&libraries=places"></script>-->
