--- a/www/index.html
+++ b/www/index.html
@@ -21,20 +21,19 @@
     <script src="js/app.js"></script>
   </head>
   <body ng-app="starter">
-
+    <input id="pac-input" class="controls" type="text" placeholder="Search Box">
     <div  ng-controller="MenuCtrl">
       <ion-side-menus>
         <!--Center content-->
         <!--<ion-pane>-->
         <ion-side-menu-content>
           <ion-nav-bar>
-            <ion-header-bar class="bar-stable">
-            <h1 class="title">Map Notes</h1>
+
               <ion-nav-buttons side="left">
               <!-- Toggle left side menu -->
                 <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
               </ion-nav-buttons>
-            </ion-header-bar>
+ 
           </ion-nav-bar>
         <ion-nav-view></ion-nav-view>
           <!--<ion-content>
@@ -61,7 +60,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!--<script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCZnUzSkNCumO4XVfZ9V26yLh9Y__14C9U&sensor=true&libraries=places"></script>-->
-    <script src="http://maps.google.com/maps/api/js?key=AIzaSyCZnUzSkNCumO4XVfZ9V26yLh9Y__14C9U"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCZnUzSkNCumO4XVfZ9V26yLh9Y__14C9U&libraries=places"></script>
 
   </body>
 </html>
