--- a/www/index.html
+++ b/www/index.html
@@ -20,21 +20,19 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
-  <body ng-app="starter">
-    <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-    <div  ng-controller="MenuCtrl">
+  <body ng-app="starter" data-tap-disabled="true">
       <ion-side-menus>
         <!--Center content-->
         <!--<ion-pane>-->
         <ion-side-menu-content>
-          <ion-nav-bar>
+          <!--<ion-nav-bar>-->
 
-              <ion-nav-buttons side="left">
+              <!--<ion-nav-buttons side="left">-->
               <!-- Toggle left side menu -->
                 <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-              </ion-nav-buttons>
+              <!--</ion-nav-buttons>-->
  
-          </ion-nav-bar>
+          <!--</ion-nav-bar>-->
         <ion-nav-view></ion-nav-view>
           <!--<ion-content>
           </ion-content>-->
@@ -42,6 +40,7 @@
         <!--</ion-pane>-->
 
         <!-- Left Menu -->
+      <div  ng-controller="MenuCtrl">
         <ion-side-menu side="left">
             <ion-header-bar class="bar-stable">
                 <h1 class="title">Map Notes</h1>
