--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
 
               <!--<ion-nav-buttons side="left">-->
               <!-- Toggle left side menu -->
-                <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+                <!--<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>-->
               <!--</ion-nav-buttons>-->
  
           <!--</ion-nav-bar>-->
