--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8">git
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
@@ -47,7 +47,7 @@
             </ion-header-bar>
             <ion-content>
               <ion-list>
-                <ion-item ng-repeat="task in tasks">
+                <ion-item ng-repeat="task in tasks" ng-click="this[task.func]()">
                   {{task.title}}
                 </ion-item>
               </ion-list>
