--- a/www/index.html
+++ b/www/index.html
@@ -22,21 +22,24 @@
   </head>
   <body ng-app="starter" data-tap-disabled="true">
       <ion-side-menus>
-        <!--Center content-->
-        <!--<ion-pane>-->
-        <ion-side-menu-content>
-          <!--<ion-nav-bar>-->
+        <div ng-controller="MainCtrl">
+          <!--Center content-->
+          <!--<ion-pane>-->
+          <ion-side-menu-content>
+            <!--<ion-nav-bar>-->
 
-              <!--<ion-nav-buttons side="left">-->
-              <!-- Toggle left side menu -->
-                <!--<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>-->
-              <!--</ion-nav-buttons>-->
- 
-          <!--</ion-nav-bar>-->
-        <ion-nav-view></ion-nav-view>
-          <!--<ion-content>
-          </ion-content>-->
-        </ion-side-menu-content>
+                <!--<ion-nav-buttons side="left">-->
+                <!-- Toggle left side menu -->
+                  <!--<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>-->
+                <!--</ion-nav-buttons>-->
+   
+            <!--</ion-nav-bar>-->
+          <ion-nav-view></ion-nav-view>
+          <info id="infoWindow" places="thisplace"></info>
+            <!--<ion-content>
+            </ion-content>-->
+          </ion-side-menu-content>
+        </div>
         <!--</ion-pane>-->
 
         <!-- Left Menu -->
