--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,7 @@
         <!--</ion-pane>-->
 
         <!-- Left Menu -->
-      <div  ng-controller="MenuCtrl">
+      <div ng-controller="MenuCtrl">
         <ion-side-menu side="left">
             <ion-header-bar class="bar-stable">
                 <h1 class="title">Map Notes</h1>
@@ -56,12 +56,12 @@
               </ion-list>
             </ion-content>
         </ion-side-menu>
-      </ion-side-menus>
-    </div>
+      </div></ion-side-menus>
+    
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!--<script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCZnUzSkNCumO4XVfZ9V26yLh9Y__14C9U&sensor=true&libraries=places"></script>-->
-    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCZnUzSkNCumO4XVfZ9V26yLh9Y__14C9U&libraries=places"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCZnUzSkNCumO4XVfZ9V26yLh9Y__14C9U&amp;libraries=places"></script>
 
   </body>
 </html>
