--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,8 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/firebase.js"></script>
+    
   </head>
   <body ng-app="starter" data-tap-disabled="true">
       <ion-side-menus>
