Move all controllers into seperate files and first pass at user authentication

--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,12 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/firebase.js"></script>
+    <script src="js/firebaseAuth.js"></script>
+    <script src="js/homeCtrl.js"></script>
+    <script src="js/editCtrl.js"></script>
+    <script src="js/mapCtrl.js"></script>
+    <script src="js/menuCtrl.js"></script>
+    <script src="js/mainCtrl.js"></script>
     
   </head>
   <body ng-app="starter" data-tap-disabled="true">
