--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
     <script src="js/app.js"></script>
     <script src="js/firebase.js"></script>
     <script src="js/firebaseAuth.js"></script>
+    <script src="js/firebaseData.js"></script>
     <script src="js/homeCtrl.js"></script>
     <script src="js/editCtrl.js"></script>
     <script src="js/mapCtrl.js"></script>
