Add facebook login

--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,7 @@
         <!--</ion-pane>-->
 
         <!-- Left Menu -->
-      <div ng-controller="MenuCtrl" ng-show"map">
+      <div ng-controller="MenuCtrl" ng-show"map"="">
         <ion-side-menu side="left">
             <ion-header-bar class="bar-stable">
                 <h1 class="title ng-cloak">Map Notes</h1>
