--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
     <script src="lib/ng-cordova-oauth/dist/ng-cordova-oauth.min.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/popupFactory.js"></script>
     <script src="js/firebase.js"></script>
     <script src="js/firebaseAuth.js"></script>
     <script src="js/firebaseData.js"></script>
