Create template for offline and save data to localStorage. TODO: detect when no internet and automatically open offline templates

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,8 @@
     <script src="js/editCtrl.js"></script>
     <script src="js/mapCtrl.js"></script>
     <script src="js/mainCtrl.js"></script>
+    <script src="js/offlineCtrl.js"></script>
+
     
   </head>
   <body ng-app="starter" data-tap-disabled="true">
