--- a/www/index.html
+++ b/www/index.html
@@ -16,8 +16,14 @@
     <script src="lib/ng-cordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
     <script src="lib/ng-cordova-oauth/dist/ng-cordova-oauth.min.js"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/placeConstructor.js"></script>
+    <script src="js/changeCurrentPlace.js"></script>
+    <script src="js/infoDirective.js"></script>
+    <script src="js/errorMessage.js"></script>
+    <script src="js/fitBounds.js"></script>
     <script src="js/popupFactory.js"></script>
     <script src="js/firebase.js"></script>
     <script src="js/firebaseAuth.js"></script>
