--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/googleFirebase.js"></script>
     <script src="js/placeConstructor.js"></script>
     <script src="js/changeCurrentPlace.js"></script>
     <script src="js/infoDirective.js"></script>
@@ -47,6 +48,6 @@
     <!--<script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCZnUzSkNCumO4XVfZ9V26yLh9Y__14C9U&sensor=true&libraries=places"></script>-->
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCZnUzSkNCumO4XVfZ9V26yLh9Y__14C9U&amp;libraries=places"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <!--<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>-->
   </body>
 </html>
