Various small formatting changes

--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
     <div ng-controller="MainCtrl">
       <ion-nav-view></ion-nav-view>
       <div id="spinnerDiv">
-        <ion-spinner icon="bubbles" ng-hide="appState.mapReady"></ion-spinner>
+        <ion-spinner icon="ios-small" ng-hide="appState.mapReady"></ion-spinner>
       </div>
       <info id="infoWindow" places="thisplace" ng-show="appState.mapReady"></info>
     </div>
