--- a/www/index.html
+++ b/www/index.html
@@ -12,10 +12,12 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ng-cordova/dist/ng-cordova.js"></script>
-    <script src="cordova.js"></script>
     <script src="lib/ng-cordova-oauth/dist/ng-cordova-oauth.min.js"></script>
+
+    <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -23,6 +25,8 @@
     <script src="js/firebase.js"></script>
     <script src="js/firebaseAuth.js"></script>
     <script src="js/firebaseData.js"></script>
+    <script src="js/offlineCtrl.js"></script>
+    <script src="js/mapCtrl.js"></script>
     <script src="js/placeConstructor.js"></script>
     <script src="js/changeCurrentPlace.js"></script>
     <script src="js/infoDirective.js"></script>
@@ -31,9 +35,7 @@
     <script src="js/popupFactory.js"></script>
     <script src="js/homeCtrl.js"></script>
     <script src="js/editCtrl.js"></script>
-    <script src="js/mapCtrl.js"></script>
     <script src="js/mainCtrl.js"></script>
-    <script src="js/offlineCtrl.js"></script>
 
     
   </head>
@@ -41,12 +43,12 @@
     <div ng-controller="MainCtrl">
       <ion-nav-view></ion-nav-view>
       <div id="spinnerDiv">
-        <ion-spinner icon="ios-small" ng-hide="appState.mapReady"></ion-spinner>
+        <ion-spinner icon="ios-small" ng-hide="appState.removeLoader"></ion-spinner>
       </div>
       <info id="infoWindow" places="thisplace" ng-show="appState.mapReady"></info>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
     <!--<script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCZnUzSkNCumO4XVfZ9V26yLh9Y__14C9U&sensor=true&libraries=places"></script>-->
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCZnUzSkNCumO4XVfZ9V26yLh9Y__14C9U&amp;libraries=places"></script>
 
