--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,7 @@
     <script src="js/homeCtrl.js"></script>
     <script src="js/editCtrl.js"></script>
     <script src="js/mainCtrl.js"></script>
+    <script src="js/instructionsCtrl.js"></script>
     <script src="js/connectivityMonitor.js"></script>
     <script src="js/menu.js"></script>
 
