Add drop down options to edit page and refactor code to remove duplication

--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,7 @@
     <script src="js/instructionsCtrl.js"></script>
     <script src="js/connectivityMonitor.js"></script>
     <script src="js/menu.js"></script>
+    <script src="js/dropdownFactory.js"></script>
 
     
   </head>
